[project]
name = "value-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "jupytext>=1.17.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sk-stepwise>=0.1.2",
    "xgboost>=3.0.1",
]

[tool.uv.sources]
sk-stepwise = { path = "../../../pylib/sk-stepwise/dist/sk_stepwise-0.1.2.tar.gz" }
